Some refinements added and huge gap at right sided fixed

--- a/homepage.css
+++ b/homepage.css
@@ -25,26 +25,21 @@
 }
 
 #banner > div:nth-child(1) {
-    width: 20%;
-    height: 90%;
-    margin: auto auto auto 240px;
-}
-
-#banner > div:nth-child(2) {
     width: 30%;
     height: 90%;
     margin: auto;
+    padding-left: 700px;
     text-align: center;
     color: white;
 }
 
-#banner > div:nth-child(3) {
+#banner > div:nth-child(2) {
     width: 5%;
     height: 90%;
-    margin: auto 620px auto auto;
+    margin: auto 580px auto auto;
 }
 
-#banner > div:nth-child(3) > div {
+#banner > div:nth-child(2) > div {
     width: 100%;
     height: 14px;
     padding-top: 10px;
@@ -72,7 +67,7 @@
 #navbar > #top > div:nth-child(1) {
     width: 10%;
     margin-top: 1%;
-    margin-left: 41%;
+    margin-left: 44%;
     height: 40%;
 }
 
@@ -143,10 +138,121 @@
 
 /* CSS Properties for main content */
 #content {
-    height: 500px;
     margin: 215px -9px 0px -9px;
-    background: antiquewhite;
 }
+
+#slider {
+    width: 100%;
+    height: 40px;
+    color: white;
+    background-color: black;
+    text-align: center;
+    font-size: 15px;
+}
+
+#slider > p {
+    padding-top: 10px;
+}
+
+#slider > p > span {
+    font-weight: bold;
+}
+
+#bigBanner {
+    width: 100%;
+    line-height: 15px;
+    height: 650px;
+    background-image: url(https://cdn.shopify.com/s/files/1/0248/3473/6191/files/shutterstock_1161591199_1944x.jpg?v=1660339761);
+}
+
+#bannerText {
+    width: 40%;
+    color: white;
+    text-align: center;
+    padding-top: 200px;
+    margin: auto;
+}
+
+#bannerText > p {
+    letter-spacing: 2px;
+}
+
+#bannerText > h1 {
+    font-family: serif;
+    font-size: 70px;
+}
+
+#bannerText > div {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+}
+
+#bannerText > div > button {
+    height: 40px;
+    letter-spacing: 2px;
+    padding: 10px;
+    background-color: white;
+    border: none;
+} 
+
+#discount {
+    width: 100%;
+    height: 550px;
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    /* border: 1px solid red; */
+    border-bottom: 1px solid #e6e6e6;
+}
+
+#discount > div {
+    height: 90%;
+    width: 25%;
+    color: white;
+    line-height: 15px;
+    text-align: center;
+}
+
+#discount > div > h1 {
+    font-family: serif;
+    font-size: 50px;
+}
+
+#discount > div:nth-child(1) > h2:nth-child(1) {
+    margin-top: 320px;
+}
+
+#discount > div:nth-child(2) > h2:nth-child(1) {
+    margin-top: 220px;
+}
+
+#discount > div:nth-child(3) > h2:nth-child(1) {
+    margin-top: 270px;
+}
+
+#discount > div > button {
+    border: none;
+    height: 40px;
+    font-size:15px;
+    font-weight: bold;
+    padding: 0px 10px 0px 10px;
+}
+
+#discount > div:nth-child(1) {
+    background-image: url(https://cdn.shopify.com/s/files/1/0248/3473/6191/files/VENDOR_ASSET_-Extra_15_Off_Select_Luxe_Staples_540x.png?v=1671459534);
+    
+}
+
+#discount > div:nth-child(2) {
+    background-image: url(https://cdn.shopify.com/s/files/1/0248/3473/6191/files/WEB_ASSET_2_540x.jpg?v=1650894933);
+}
+
+#discount > div:nth-child(3) {
+    background-image: url(https://cdn.shopify.com/s/files/1/0248/3473/6191/files/womens_tops_2_540x.jpg?v=1630508297);
+}
+
 
 
 /* CSS Properties for Footer */
@@ -160,8 +266,9 @@
     width: 100%;
     display: flex;
     background: white;
-    padding: 23px 12% 20px 12%;
+    padding: 23px 0% 20px 0%;
     gap: 25px;
+    justify-content: center;
 }
 
 #footer > div:nth-child(1) > div {
